fix overlapping images [ch126]

--- a/source/stylesheets/base/_helpers.scss
+++ b/source/stylesheets/base/_helpers.scss
@@ -59,6 +59,15 @@
 
 
 .img-as-bg {
-  width: 100%;
-  height: auto;
+  z-index: -999;
+  bottom: 0;
+  top: 0;
+  margin: auto;
+  width: auto;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.white-bg { 
+  background-color: white;
 }
