--- a/source/stylesheets/layout/_about.scss
+++ b/source/stylesheets/layout/_about.scss
@@ -1,3 +1,9 @@
+.section-description {
+	@include media('<=tablet') {
+		background-color: white;
+	}
+}
+
 .text-info-description {
 	font-weight: 300;
 	line-height: 25px;
